[project]
name = "deep-rl-learning"
version = "0.1.0"
description = "Structured exploration of Reinforcement Learning concepts with hands-on implementations"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "gymnasium>=0.28.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "contextualbandits"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

